--- a/Application/Anqiang/comments/index.html
+++ b/Application/Anqiang/comments/index.html
@@ -4,8 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no,width=device-width,height=device-height">
 	<link rel="stylesheet" type="text/css" href="css/ionic.min.css">
-	<style>
 	
+	
+	<style>
+	.h1
+	{
+		padding-top: -20px;
+		margin-top: -20px;
+	}
 	</style>
 </head>
 
@@ -14,33 +20,38 @@
 
 	
 
-	<div class="list card">
+	<!-- <div class="list card"> -->
 
-		<div class="item item-avatar">
+		<!-- <div class="item item-avatar">
 			<img src="img/rujia.jpg">
 			<h2>120<i class="icon ion-social-yen"></i></h2>
 			<p>introduction</p>
+		</div> -->
+		<div class="item item-thumbnail-left item-light">
+			<img src="img/rujia.jpg">
+			<h2>120<i class="icon ion-social-yen"></i></h2>
+			<p>介绍</p>
 		</div>
-
+		<div class="hi">
 		<div class="item item-body">
-			<img class="full-image" src="img/star.jpg">
+			<h3>评分</h3>
+			<img src="img/star.jpg">
 			<label class="item item-input item-floating-label">
 				
-				<input type="text" placeholder="请输入您的评论">
+				<textarea type="text" placeholder="请输入您的评论"></textarea>
 			</label>
-			<button class="button button-block button-positive">
-			上传图片
+			<button class="button button-small button-positive">
+				上传图片
 			</button>
 			<button class="button button-block button-positive">
-			提交评论
+				提交评论
 			</button>
-
-
+		</div>
 		</div>
 
 		
 
-	</div>
+	<!-- </div> -->
 
 
 
