--- a/Application/Anqiang/comments/index.html
+++ b/Application/Anqiang/comments/index.html
@@ -32,15 +32,26 @@
 		font-size: 25px;
 		color: red;	
 	}
-	.bufoot
+
+	.he
 	{
-		margin-bottom: 0px;
+		margin-top: -10px;
+		margin-left: 10px;
+		margin-right: 10px;
+		padding-left: 5px;
+		padding-right: 5px;
+
 	}
 
 </style>
 </head>
 
 <body>
+<div class="bar bar-header bar-positive">
+	<i class="button icon ion-chevron-left"></i>
+	<h1 class="title">我要评价</h1>
+</div>
+<div class="scroll-content has-header">
 	<div class="item item-thumbnail-left item-light">
 		<img src="img/rujia.jpg">
 		<h2><i class="icon ion-social-yen"></i>120</h2>
@@ -54,7 +65,7 @@
 			</div>
 			<label class="item item-input item-floating-label area">
 				
-				<textarea type="text" placeholder="请输入您的评论" cols="60" rows="3"></textarea>
+				<textarea type="text" placeholder="请输入您的评论" cols="60" rows="2"></textarea>
 			</label>
 			<button class="button button-small button-positive">
 				<i class="icon ion-image"></i>
@@ -67,13 +78,19 @@
 			提交评论<i class="icon ion-checkmark"></i>
 		</button>
 	</div> -->
-	<div class="tabs tabs-icon-top tabs-positive" >
-  <a class="tab-item">
-    <i class="icon ion-checkmark"></i>
-    提交评论
-  </a>
+	
  
  
-</div>
+
+<div class="he">
+	<button class="button button-full button-positive">
+				提交评论
+	</button>
+	</div>
+	
+
+	
+	<div>
+	
 </body>
 </html>
