--- a/Application/Anqiang/comments/execise.html
+++ b/Application/Anqiang/comments/execise.html
@@ -1009,5 +1009,201 @@ text-align:justify;
 </div>
 
 .test-list span{display:inline-block;width:210px;}
+
+
+
+ionic头部与底部
+<div class="bar bar-header bar-light">
+  <h1 class="title">bar-light</h1>
+</div>
+<div class="bar bar-subheader">
+  <h2 class="title">Sub Header</h2>
+</div>
+<div class="bar bar-footer bar-balanced">
+  <div class="title">Footer</div>
+</div>
+<div class="bar bar-footer">
+  <button class="button button-clear pull-right">Right</button>
+</div>
+
+按钮
+无背景button-outline
+无背景无表框button-outline
+按钮栏？
+<div class="button-bar">
+  <a class="button">First</a>
+  <a class="button">Second</a>
+  <a class="button">Third</a>
+</div>
+列表
+<ul class="list">
+    <li class="item">
+      ...
+    </li>
+</ul>
+列表分隔符
+ <div class="item item-divider">
+    Candy Bars
+  </div>
+  图标列表
+  <div class="list">
+
+        <a class="item item-icon-left" href="#">
+          <i class="icon ion-email"></i>
+          Check mail
+        </a>
+
+        <a class="item item-icon-left item-icon-right" href="#">
+          <i class="icon ion-chatbubble-working"></i>
+          Call Ma
+			<i class="icon ion-ios-telephone-outline"></i>
+          
+        </a>
+
+        <a class="item item-icon-left" href="#">
+          <i class="icon ion-mic-a"></i>
+          Record album
+          <span class="item-note">
+            Grammy
+          </span>
+        </a>
+
+        <a class="item item-icon-left" href="#">
+          <i class="icon ion-person-stalker"></i>
+          Friends
+          <span class="badge badge-assertive">0</span>
+        </a>
+ 带头像列表
+ <div class="list">
+
+    <a class="item item-avatar" href="#">
+      <img src="venkman.jpg">
+      <h2>Venkman</h2>
+      <p>Back off, man. I'm a scientist.</p>
+    </a>
+
+    ...
+
+</div>
+缩略图列表
+<div class="list">
+
+    <a class="item item-thumbnail-left" href="#">
+      <img src="cover.jpg">
+      <h2>Pretty Hate Machine</h2>
+      <p>Nine Inch Nails</p>
+    </a>
+
+    ...
+
+</div>
+卡片
+表单和输入框
+toggle
+<ul class="list">
+
+  <li class="item item-toggle">
+     HTML5
+     <label class="toggle toggle-assertive">
+       <input type="checkbox">
+       <div class="track">
+         <div class="handle"></div>
+       </div>
+     </label>
+  </li>
+
+  ...
+
+</ul>
+checkbox
+<ul class="list">
+
+  <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Flux Capacitor
+  </li>
+
+  ...
+
+</ul>
+单选框
+<div class="list">
+
+<label class="item item-radio">
+  <input type="radio" name="group" value="go" checked="checked">
+  <div class="item-content">
+    Go
+  </div>
+  <i class="radio-icon ion-checkmark"></i>
+</label>
+range
+<div class="range">
+  <i class="icon ion-volume-low"></i>
+  <input type="range" name="volume">
+  <i class="icon ion-volume-high"></i>
+</div>
+
+<div class="list" style="margin-top: 13px">
+  <div class="item item-divider">
+    Ranges In A List
+  </div>
+  <div class="item range range-positive">
+    <i class="icon ion-ios-sunny-outline"></i>
+    <input type="range" name="volume" min="0" max="100" value="12">
+    <i class="icon ion-ios-sunny"></i>
+  </div>
+select
+<div class="list">
+
+  <div class="item item-input item-select">
+    <div class="input-label">
+      Lightsaber
+    </div>
+    <select>
+      <option>Blue</option>
+      <option selected="">Green</option>
+      <option>Red</option>
+    </select>
+  </div>
+tab
+图标选项卡
+<div class="tabs tabs-icon-only">
+  <a class="tab-item">
+    <i class="icon ion-home"></i>
+  </a>
+  <a class="tab-item">
+    <i class="icon ion-star"></i>
+  </a>
+  <a class="tab-item">
+    <i class="icon ion-gear-a"></i>
+  </a>
+</div>
+条纹样式选项卡
+<div class="tabs-striped tabs-top tabs-background-positive tabs-color-light">
+    <div class="tabs">
+      <a class="tab-item active" href="#">
+        <i class="icon ion-home"></i>
+        Test
+      </a>
+      <a class="tab-item" href="#">
+        <i class="icon ion-star"></i>
+        Favorites
+      </a>
+      <a class="tab-item" href="#">
+        <i class="icon ion-gear-a"></i>
+        Settings
+      </a>
+    </div>
+  </div>
+grid
+<div class="row">
+  <div class="col col-33 col-offset-33">.col</div>
+  <div class="col">.col</div>
+</div>
+颜色
+图标
+
 </body>
 </html>
